--- a/apiotp/src/main/resources/application.properties
+++ b/apiotp/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=apiotp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=daithien2004@gmail.com
-spring.mail.password=mhynmvjndddebqzg
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
